--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       </nav>
 
       <div class="header-social-links">
-        <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>-->
+        <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a></a>-->
+        <a href="https://www.facebook.com/cechpucp" class="facebook"><i class="bi bi-facebook"></i>
         <a href="https://www.instagram.com/cechpucp/" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/company/c%C3%ADrculo-de-estudios-chinos-secci%C3%B3n-derecho/posts/?feedView=all" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
@@ -613,19 +613,19 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">ZenBlog</span>
+            <span class="sitename">Círculo de Estudios Chinos</span>
           </a>
           <div class="footer-contact pt-3">
             <p>A108 Adam Street</p>
             <p>New York, NY 535022</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p><strong>Email:</strong> <span>cech-derecho@pucp.edu.pe</span> | <span>cech-economia@pucp.edu.pe</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a></a>-->
+            <a href="https://www.facebook.com/cechpucp" class="facebook"><i class="bi bi-facebook"></i>
+            <a href="https://www.instagram.com/cechpucp/" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/c%C3%ADrculo-de-estudios-chinos-secci%C3%B3n-derecho/posts/?feedView=all" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
