--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - ZenBlog Bootstrap Template</title>
+  <title>CECH-PUCP</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -619,7 +619,10 @@
             <p>A108 Adam Street</p>
             <p>New York, NY 535022</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>cech-derecho@pucp.edu.pe</span> | <span>cech-economia@pucp.edu.pe</span></p>
+            <p><strong>Email:</strong>
+            <a href="mailto:cech-derecho@pucp.edu.pe">cech-derecho@pucp.edu.pe</a> |
+            <a href="mailto:cech-economia@pucp.edu.pe">cech-economia@pucp.edu.pe</a>
+            </p>
           </div>
           <div class="social-links d-flex mt-4">
             <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a></a>-->
