--- a/index.html
+++ b/index.html
@@ -619,10 +619,10 @@
             <p>A108 Adam Street</p>
             <p>New York, NY 535022</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong>
-            <a href="mailto:cech-derecho@pucp.edu.pe">cech-derecho@pucp.edu.pe</a> |
-            <a href="mailto:cech-economia@pucp.edu.pe">cech-economia@pucp.edu.pe</a>
-            </p>
+            <p><strong>Email:</strong><br>
+            <span>cech-derecho@pucp.edu.pe</span><br>
+            <span>cech-economia@pucp.edu.pe</span>
+          </p>
           </div>
           <div class="social-links d-flex mt-4">
             <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a></a>-->
