--- a/index.html
+++ b/index.html
@@ -616,9 +616,9 @@
             <span class="sitename">Círculo de Estudios Chinos</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
+            <p>Av. Universitaria Nº 890, San Miguel</p>
+            <p>Lima, Perú</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+51 5589 55488 55</span></p>
             <p><strong>Email:</strong><br>
             <span>cech-derecho@pucp.edu.pe</span><br>
             <span>cech-economia@pucp.edu.pe</span>
