--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contact - ZenBlog Bootstrap Template</title>
+  <title>Contact - CECH-PUCP</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -74,8 +74,8 @@
       </nav>
 
       <div class="header-social-links">
-        <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>-->
+        <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a></a>-->
+        <a href="https://www.facebook.com/cechpucp" class="facebook"><i class="bi bi-facebook"></i>
         <a href="https://www.instagram.com/cechpucp/" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/company/c%C3%ADrculo-de-estudios-chinos-secci%C3%B3n-derecho/posts/?feedView=all" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
@@ -114,7 +114,8 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>Address</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Av. Universitaria Nº 890, San Miguel</p>
+                <p>Lima, Perú</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -130,7 +131,8 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>info@example.com</p>
+                <p><span>cech-derecho@pucp.edu.pe</span><br>
+            <span>cech-economia@pucp.edu.pe</span></p>
               </div>
             </div><!-- End Info Item -->
 
@@ -182,19 +184,22 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">ZenBlog</span>
+            <span class="sitename">Círculo de Estudios Chinos</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
+            <p>Av. Universitaria Nº 890, San Miguel</p>
+            <p>Lima, Perú</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p><strong>Email:</strong><br>
+            <span>cech-derecho@pucp.edu.pe</span><br>
+            <span>cech-economia@pucp.edu.pe</span>
+          </p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+             <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a></a>-->
+            <a href="https://www.facebook.com/cechpucp" class="facebook"><i class="bi bi-facebook"></i>
+            <a href="https://www.instagram.com/cechpucp/" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/c%C3%ADrculo-de-estudios-chinos-secci%C3%B3n-derecho/posts/?feedView=all" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
