--- a/single-post.html
+++ b/single-post.html
@@ -74,8 +74,8 @@
       </nav>
 
       <div class="header-social-links">
-        <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>-->
+        <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a></a>-->
+        <a href="https://www.facebook.com/cechpucp" class="facebook"><i class="bi bi-facebook"></i>
         <a href="https://www.instagram.com/cechpucp/" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/company/c%C3%ADrculo-de-estudios-chinos-secci%C3%B3n-derecho/posts/?feedView=all" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
