--- a/about.html
+++ b/about.html
@@ -88,11 +88,11 @@
     <!-- Page Title -->
     <div class="page-title">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">About</h1>
+        <h1 class="mb-2 mb-lg-0">Nosotros</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">About</li>
+            <li class="current">Nosotros</li>
           </ol>
         </nav>
       </div>
@@ -106,12 +106,19 @@
         <div class="row gy-4">
 
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
-            <p class="who-we-are">Who We Are</p>
-            <h3>Unleashing Potential with Creative Strategy</h3>
+            <p class="who-we-are">¿Qué es el Círculo de Estudios Chinos?</p>
+            <h3>ESTUDIO DEL SISTEMA ECONÓMICO Y JURÍDICO DE LA REPÚBLICA POPULAR CHINA Y SU RELACIÓN CON EL SISTEMA PERUANO</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              El Instituto Confucio – PUCP presenta el Círculo de Estudios Chinos, una iniciativa académica que reúne a estudiantes y 
+              egresados interesados en profundizar en distintos aspectos de la realidad china a través de sus tres secciones especializadas: 
+              Economía, Derecho y Literatura. Este espacio busca fomentar el estudio crítico, multidisciplinario y colaborativo sobre la historia, 
+              cultura, pensamiento y dinámicas contemporáneas de China, promoviendo el análisis de su influencia global y sus vínculos con el Perú.
             </p>
+            <p> Nos proponemos consolidarnos como uno de los principales grupos académicos en Latinoamérica dedicados al estudio integral de China. 
+              Aspiramos a ofrecer herramientas como publicaciones, seminarios, círculos de lectura y espacios de discusión que promuevan un mayor
+              entendimiento de la historia, el pensamiento, el sistema jurídico, la literatura y el modelo económico chino. Buscamos contribuir a una 
+              comprensión crítica de su influencia global, especialmente en el contexto peruano y latinoamericano, desde una perspectiva multidisciplinaria 
+              que fortalezca el quehacer profesional de estudiantes e investigadores en diversas áreas.</p>
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
               <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
