--- a/about.html
+++ b/about.html
@@ -88,10 +88,10 @@
     <!-- Page Title -->
     <div class="page-title">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Nosotros</h1>
+        <h1 class="mb-2 mb-lg-0">Sobre el Círculo de Estudios Chinos</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li class="current">Nosotros</li>
           </ol>
         </nav>
@@ -106,9 +106,9 @@
         <div class="row gy-4">
 
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
-            <p class="who-we-are">¿Qué es el Círculo de Estudios Chinos?</p>
-            <h3>ESTUDIO DEL SISTEMA ECONÓMICO Y JURÍDICO DE LA REPÚBLICA POPULAR CHINA Y SU RELACIÓN CON EL SISTEMA PERUANO</h3>
-            <p class="fst-italic">
+            <p class="who-we-are">Visión</p>
+            <h3>¿Qué es el Círculo de Estudios Chinos?</h3>
+            <p>
               El Instituto Confucio – PUCP presenta el Círculo de Estudios Chinos, una iniciativa académica que reúne a estudiantes y 
               egresados interesados en profundizar en distintos aspectos de la realidad china a través de sus tres secciones especializadas: 
               Economía, Derecho y Literatura. Este espacio busca fomentar el estudio crítico, multidisciplinario y colaborativo sobre la historia, 
@@ -119,10 +119,11 @@
               entendimiento de la historia, el pensamiento, el sistema jurídico, la literatura y el modelo económico chino. Buscamos contribuir a una 
               comprensión crítica de su influencia global, especialmente en el contexto peruano y latinoamericano, desde una perspectiva multidisciplinaria 
               que fortalezca el quehacer profesional de estudiantes e investigadores en diversas áreas.</p>
+            <p> Los invitamos a explorar más sobre cada sección del Círculo:</p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in voluptate velit.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Sección Derecho.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Sección Economía.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Sección Literatura.</span></li>
             </ul>
           </div>
 
@@ -267,10 +268,10 @@
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Enlaces</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Nosotros</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
