--- a/about.html
+++ b/about.html
@@ -49,25 +49,16 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <!--<li><a href="index.html">Home</a></li>-->
-          <li><a href="about.html" class="active">Nosotros</a></li>
-          <li><a href="single-post.html">Single Post</a></li>
-          <li class="dropdown"><a href="#"><span>Categories</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="about.html"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="category.html">Category 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="category.html">Category 2</a></li>
-              <li><a href="category.html">Category 3</a></li>
-              <li><a href="category.html">Category 4</a></li>
+              <li><a href="about.html">CECH</a></li>
+              <li><a href="about.html">Sección Derecho</a></li>
+              <li><a href="about.html">Sección Economía</a></li>
+              <li><a href="about.html">Sección Literatura</a></li>
             </ul>
           </li>
+          <li><a href="category.html">Publicaciones</a></li>
+          <li><a href="category.html">Eventos</a></li>
           <li><a href="contact.html">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
