--- a/about.html
+++ b/about.html
@@ -58,6 +58,7 @@
             </ul>
           </li>
           <li><a href="category.html">Publicaciones</a></li>
+          <li><a href="starter-paget.html">#Noticias</a></li>
           <li><a href="category.html">Eventos</a></li>
           <li><a href="contact.html">Contacto</a></li>
         </ul>
