--- a/about.html
+++ b/about.html
@@ -54,12 +54,12 @@
               <li><a href="about.html">CECH</a></li>
               <li><a href="about.html">Sección Derecho</a></li>
               <li><a href="about.html">Sección Economía</a></li>
-              <li><a href="about.html">Sección Literatura</a></li>
+              <li><a href="starter-page.html">Sección Literatura</a></li>
             </ul>
           </li>
-          <li><a href="category.html">Publicaciones</a></li>
-          <li><a href="starter-paget.html">#Noticias</a></li>
-          <li><a href="category.html">Eventos</a></li>
+          <li><a href="publish.html">Publicaciones</a></li>
+          <li><a href="news.html">#Noticias</a></li>
+          <li><a href="events.html">Eventos</a></li>
           <li><a href="contact.html">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
