--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
           <li class="dropdown"><a href="about.html"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="about.html">CECH</a></li>
-              <li><a href="about.html">Sección Derecho</a></li>
-              <li><a href="about.html">Sección Economía</a></li>
-              <li><a href="starter-page.html">Sección Literatura</a></li>
+              <li><a href="derecho.html">Sección Derecho</a></li>
+              <li><a href="economia.html">Sección Economía</a></li>
+              <li><a href="literatura.html">Sección Literatura</a></li>
             </ul>
           </li>
           <li><a href="publish.html">Publicaciones</a></li>
