--- a/contact.html
+++ b/contact.html
@@ -80,11 +80,11 @@
     <!-- Page Title -->
     <div class="page-title">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Contact</h1>
+        <h1 class="mb-2 mb-lg-0">Información de contacto</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">Contact</li>
+            <li><a href="index.html">Inicio</a></li>
+            <li class="current">Contacto</li>
           </ol>
         </nav>
       </div>
@@ -196,10 +196,10 @@
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Enlaces</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Nosotros</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">Nosotros</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
