--- a/economia.html
+++ b/economia.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Nosotros - CECH-PUCP</title>
+  <title>Sec.Economía - CECH-PUCP</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -98,24 +98,24 @@
         <div class="row gy-4">
 
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
-            <p class="who-we-are">Visión</p>
+            <p class="who-we-are">Sección Economía</p>
             <h3>¿Qué es el Círculo de Estudios Chinos?</h3>
             <p>
-              El Instituto Confucio – PUCP presenta el Círculo de Estudios Chinos, una iniciativa académica que reúne a estudiantes y 
-              egresados interesados en profundizar en distintos aspectos de la realidad china a través de sus tres secciones especializadas: 
-              Economía, Derecho y Literatura. Este espacio busca fomentar el estudio crítico, multidisciplinario y colaborativo sobre la historia, 
-              cultura, pensamiento y dinámicas contemporáneas de China, promoviendo el análisis de su influencia global y sus vínculos con el Perú.
+              El Círculo de Estudios Chinos – Sección Economía tiene como misión convertirse en un espacio de investigación y discusión académica
+              sobre la economía china, con énfasis en sus relaciones financieras y comerciales con el Perú. A través del análisis riguroso, la 
+              producción académica y el debate especializado, buscamos contribuir a la comprensión del crecimiento económico de China, su integración
+              en el mercado global y el desarrollo de su vínculo con América Latina
             </p>
-            <p> Nos proponemos consolidarnos como uno de los principales grupos académicos en Latinoamérica dedicados al estudio integral de China. 
-              Aspiramos a ofrecer herramientas como publicaciones, seminarios, círculos de lectura y espacios de discusión que promuevan un mayor
-              entendimiento de la historia, el pensamiento, el sistema jurídico, la literatura y el modelo económico chino. Buscamos contribuir a una 
-              comprensión crítica de su influencia global, especialmente en el contexto peruano y latinoamericano, desde una perspectiva multidisciplinaria 
-              que fortalezca el quehacer profesional de estudiantes e investigadores en diversas áreas.</p>
-            <p> Los invitamos a explorar más sobre cada sección del Círculo:</p>
+            <p> El objetivo principal es obtener conocimiento y lograr un entendimiento profundo de las normas que componen el marco económico chino 
+              en sus aspectos doméstico e internacional, así como comprender la evolución de sus intercambios internacionales orientado a sus 
+              relaciones con la economía peruana.</p>
+            <p> Para lograr nuestro objetivo, nos proponemos en realizar las siguientes iniciativas:</p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Sección Derecho.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Sección Economía.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Sección Literatura.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Fomentar la discusión académica mediante reuniones quincenales sobre los temas de investigación asignados.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Elaborar notas de análisis breves relacionadas con la economía china.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Desarrollar working papers sobre temas específicos de investigación en la economía china.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Organizar y participar en eventos académicos sobre temas de interés general.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Publicar trabajos en conjunto con el Centro de Estudios Orientales (CEO) sobre temas relacionados con China.</span></li>
             </ul>
           </div>
 
