--- a/economia.html
+++ b/economia.html
@@ -99,7 +99,7 @@
 
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
             <p class="who-we-are">Sección Economía</p>
-            <h3>¿Qué es el Círculo de Estudios Chinos?</h3>
+            <h3>¿A qué se dedica la Sección Economía?</h3>
             <p>
               El Círculo de Estudios Chinos – Sección Economía tiene como misión convertirse en un espacio de investigación y discusión académica
               sobre la economía china, con énfasis en sus relaciones financieras y comerciales con el Perú. A través del análisis riguroso, la 
