--- a/derecho.html
+++ b/derecho.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Nosotros - CECH-PUCP</title>
+  <title>Sec.Derecho - CECH-PUCP</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -98,31 +98,21 @@
         <div class="row gy-4">
 
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="100">
-            <p class="who-we-are">Visión</p>
-            <h3>¿Qué es el Círculo de Estudios Chinos?</h3>
-            <p>
-              El Instituto Confucio – PUCP presenta el Círculo de Estudios Chinos, una iniciativa académica que reúne a estudiantes y 
-              egresados interesados en profundizar en distintos aspectos de la realidad china a través de sus tres secciones especializadas: 
-              Economía, Derecho y Literatura. Este espacio busca fomentar el estudio crítico, multidisciplinario y colaborativo sobre la historia, 
-              cultura, pensamiento y dinámicas contemporáneas de China, promoviendo el análisis de su influencia global y sus vínculos con el Perú.
-            </p>
-            <p> Nos proponemos consolidarnos como uno de los principales grupos académicos en Latinoamérica dedicados al estudio integral de China. 
-              Aspiramos a ofrecer herramientas como publicaciones, seminarios, círculos de lectura y espacios de discusión que promuevan un mayor
-              entendimiento de la historia, el pensamiento, el sistema jurídico, la literatura y el modelo económico chino. Buscamos contribuir a una 
-              comprensión crítica de su influencia global, especialmente en el contexto peruano y latinoamericano, desde una perspectiva multidisciplinaria 
-              que fortalezca el quehacer profesional de estudiantes e investigadores en diversas áreas.</p>
-            <p> Los invitamos a explorar más sobre cada sección del Círculo:</p>
+            <p class="who-we-are">Sección Derecho</p>
+            <h3>¿A qué se dedica la Sección Derecho?</h3>
+            <p> TEXTO1</p>
+            <p> TEXTO2</p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Sección Derecho.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Sección Economía.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Sección Literatura.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>iDEA1</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>IDEA2</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>IDEA3</span></li>
             </ul>
           </div>
 
           <div class="col-lg-6 about-images" data-aos="fade-up" data-aos-delay="200">
             <div class="row gy-4">
               <div class="col-lg-6">
-                <img src="assets/img/about-company-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/circulo-derecho.png" class="img-fluid" alt="">
               </div>
               <div class="col-lg-6">
                 <div class="row gy-4">
@@ -262,8 +252,8 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Enlaces</h4>
           <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Nosotros</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="about.html">Nosotros</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
