--- a/economia.html
+++ b/economia.html
@@ -122,7 +122,7 @@
           <div class="col-lg-6 about-images" data-aos="fade-up" data-aos-delay="200">
             <div class="row gy-4">
               <div class="col-lg-6">
-                <img src="assets/img/circulo-economia.jpg" class="img-fluid" alt="">
+                <img src="assets/img/circulo-economia.png" class="img-fluid" alt="">
               </div>
               <div class="col-lg-6">
                 <div class="row gy-4">
