--- a/eventos/nueva-convocatoria-cech-economia-2025-1.html
+++ b/eventos/nueva-convocatoria-cech-economia-2025-1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Nueva-convocatoria-cech-economia-2025-1 - CECH-PUCP</title>
+  <title>nueva-convocatoria-cech-economia-2025-1 - CECH-PUCP</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -97,7 +97,7 @@
 
           <!-- Blog Details Section -->
           <section id="blog-details" class="blog-details section">
-            <div class="container">
+            <!--<div class="container">-->
 
               <article class="article">
 
@@ -148,7 +148,7 @@
                     Texto 9.
                   </p>
 
-                </div><!-- End post content -->
+                <!--</div><!-- End post content -->
 
                 <div class="meta-bottom">
                   <i class="bi bi-folder"></i>
