--- a/contacto.html
+++ b/contacto.html
@@ -57,10 +57,10 @@
               <li><a href="literatura.html">Sección Literatura</a></li>
             </ul>
           </li>
-          <li><a href="publish.html">Publicaciones</a></li>
-          <li><a href="news.html">#Noticias</a></li>
-          <li><a href="events.html">Eventos</a></li>
-          <li><a href="contact.html">Contacto</a></li>
+          <li><a href="publicaciones.html">Publicaciones</a></li>
+          <li><a href="noticias.html">#Noticias</a></li>
+          <li><a href="eventos.html">Eventos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -105,7 +105,7 @@
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
-                <h3>Address</h3>
+                <h3>Dirección</h3>
                 <p>Av. Universitaria Nº 890, San Miguel</p>
                 <p>Lima, Perú</p>
               </div>
@@ -114,7 +114,7 @@
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
-                <h3>Call Us</h3>
+                <h3>Teléfono</h3>
                 <p>+1 5589 55488 55</p>
               </div>
             </div><!-- End Info Item -->
@@ -122,7 +122,7 @@
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="500">
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
-                <h3>Email Us</h3>
+                <h3>Correo electrónico</h3>
                 <p><span>cech-derecho@pucp.edu.pe</span><br>
             <span>cech-economia@pucp.edu.pe</span></p>
               </div>
