--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
               <li><a href="literatura.html">Sección Literatura</a></li>
             </ul>
           </li>
-          <li><a href="publish.html">Publicaciones</a></li>
-          <li><a href="news.html">#Noticias</a></li>
-          <li><a href="events.html">Eventos</a></li>
-          <li><a href="contact.html">Contacto</a></li>
+          <li><a href="publicaciones.html">Publicaciones</a></li>
+          <li><a href="noticias.html">#Noticias</a></li>
+          <li><a href="eventos.html">Eventos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -625,9 +625,9 @@
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Enlaces</h4>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="about.html">Nosotros</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Terms of service</a></li>
