--- a/eventos.html
+++ b/eventos.html
@@ -57,10 +57,10 @@
               <li><a href="literatura.html">Sección Literatura</a></li>
             </ul>
           </li>
-          <li><a href="publish.html">Publicaciones</a></li>
-          <li><a href="news.html">#Noticias</a></li>
-          <li><a href="events.html">Eventos</a></li>
-          <li><a href="contact.html">Contacto</a></li>
+          <li><a href="publicaciones.html">Publicaciones</a></li>
+          <li><a href="noticias.html">#Noticias</a></li>
+          <li><a href="eventos.html">Eventos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -343,24 +343,6 @@
           <div class="widgets-container">
 
             <!-- Blog Author Widget 2 -->
-            <div class="blog-author-widget-2 widget-item">
-
-              <div class="d-flex flex-column align-items-center">
-                <img src="assets/img/blog/blog-author.jpg" class="rounded-circle flex-shrink-0" alt="">
-                <h4>Jane Smith</h4>
-                <div class="social-links">
-                  <a href="https://x.com/#"><i class="bi bi-twitter-x"></i></a>
-                  <a href="https://facebook.com/#"><i class="bi bi-facebook"></i></a>
-                  <a href="https://instagram.com/#"><i class="biu bi-instagram"></i></a>
-                  <a href="https://instagram.com/#"><i class="biu bi-linkedin"></i></a>
-                </div>
-
-                <p>
-                  Itaque quidem optio quia voluptatibus dolorem dolor. Modi eum sed possimus accusantium. Quas repellat voluptatem officia numquam sint aspernatur voluptas. Esse et accusantium ut unde voluptas.
-                </p>
-
-              </div>
-            </div><!--/Blog Author Widget 2 -->
 
             <!-- Search Widget -->
             <div class="search-widget widget-item">
