--- a/publicaciones.html
+++ b/publicaciones.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Category - CECH-PUCP</title>
+  <title>Publicaciones - CECH-PUCP</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -57,10 +57,10 @@
               <li><a href="literatura.html">Sección Literatura</a></li>
             </ul>
           </li>
-          <li><a href="publish.html">Publicaciones</a></li>
-          <li><a href="news.html">#Noticias</a></li>
-          <li><a href="events.html">Eventos</a></li>
-          <li><a href="contact.html">Contacto</a></li>
+          <li><a href="publicaciones.html">Publicaciones</a></li>
+          <li><a href="noticias.html">#Noticias</a></li>
+          <li><a href="eventos.html">Eventos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -80,11 +80,11 @@
     <!-- Page Title -->
     <div class="page-title position-relative">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Category</h1>
+        <h1 class="mb-2 mb-lg-0">Publicaciones</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">Categories</li>
+            <li><a href="index.html">Inicio</a></li>
+            <li class="current">Publicaciones</li>
           </ol>
         </nav>
       </div>
@@ -343,25 +343,7 @@
           <div class="widgets-container">
 
             <!-- Blog Author Widget 2 -->
-            <div class="blog-author-widget-2 widget-item">
-
-              <div class="d-flex flex-column align-items-center">
-                <img src="assets/img/blog/blog-author.jpg" class="rounded-circle flex-shrink-0" alt="">
-                <h4>Jane Smith</h4>
-                <div class="social-links">
-                  <a href="https://x.com/#"><i class="bi bi-twitter-x"></i></a>
-                  <a href="https://facebook.com/#"><i class="bi bi-facebook"></i></a>
-                  <a href="https://instagram.com/#"><i class="biu bi-instagram"></i></a>
-                  <a href="https://instagram.com/#"><i class="biu bi-linkedin"></i></a>
-                </div>
-
-                <p>
-                  Itaque quidem optio quia voluptatibus dolorem dolor. Modi eum sed possimus accusantium. Quas repellat voluptatem officia numquam sint aspernatur voluptas. Esse et accusantium ut unde voluptas.
-                </p>
-
-              </div>
-            </div><!--/Blog Author Widget 2 -->
-
+            
             <!-- Search Widget -->
             <div class="search-widget widget-item">
 
@@ -475,10 +457,10 @@
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Enlaces</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Nosotros</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">Nosotros</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
