--- a/starter-page.html
+++ b/starter-page.html
@@ -57,17 +57,17 @@
               <li><a href="literatura.html">Sección Literatura</a></li>
             </ul>
           </li>
-          <li><a href="publish.html">Publicaciones</a></li>
-          <li><a href="news.html">#Noticias</a></li>
-          <li><a href="events.html">Eventos</a></li>
-          <li><a href="contact.html">Contacto</a></li>
+          <li><a href="publicaciones.html">Publicaciones</a></li>
+          <li><a href="noticias.html">#Noticias</a></li>
+          <li><a href="eventos.html">Eventos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
       <div class="header-social-links">
-        <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>-->
+        <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>-->
+        <a href="https://www.facebook.com/cechpucp" class="facebook"><i class="bi bi-facebook"></i></a>-->
         <a href="https://www.instagram.com/cechpucp/" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/company/c%C3%ADrculo-de-estudios-chinos-secci%C3%B3n-derecho/posts/?feedView=all" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
@@ -137,7 +137,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Enlaces</h4>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="about.html">Nosotros</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Terms of service</a></li>
