--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
 
           <div class="swiper-wrapper">
 
-            <div class="swiper-slide" style="background-image: url('assets/img/post-slide-1.jpg');">
+            <div class="swiper-slide" style="background-image: url('assets/img/post-slide-cech.jpeg');">
               <div class="content">
-                <h2><a href="single-post.html">The Best Homemade Masks for Face (keep the Pimples Away)</a></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem neque est mollitia! Beatae minima assumenda repellat harum vero, officiis ipsam magnam obcaecati cumque maxime inventore repudiandae quidem necessitatibus rem atque.</p>
+                <h2><a href="about.html">Somos el Círculo de Estudios Chinos</a></h2>
+                <p>Información importante</p>
               </div>
             </div>
 
