--- a/eventos/nueva-convocatoria-cech-economia-2025-1.html
+++ b/eventos/nueva-convocatoria-cech-economia-2025-1.html
@@ -40,7 +40,7 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
 
-      <a href="../index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+      <a href="../" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename">Círculo de Estudios Chinos</h1>
@@ -83,7 +83,7 @@
         <h1 class="mb-2 mb-lg-0">Eventos y Actividades</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../">Inicio</a></li>
             <li class="current">Eventos</li>
           </ol>
         </nav>
@@ -268,7 +268,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="../index.html" class="logo d-flex align-items-center">
+          <a href="../" class="logo d-flex align-items-center">
             <span class="sitename">Círculo de Estudios Chinos</span>
           </a>
           <div class="footer-contact pt-3">
@@ -291,7 +291,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Enlaces</h4>
           <ul>
-            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../">Inicio</a></li>
             <li><a href="../about.html">Nosotros</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Terms of service</a></li>
