--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="index.html" class="logo d-flex align-items-center">
+          <a href="./" class="logo d-flex align-items-center">
             <span class="sitename">Círculo de Estudios Chinos</span>
           </a>
           <div class="footer-contact pt-3">
@@ -627,7 +627,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Enlaces</h4>
           <ul>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="./">Inicio</a></li>
             <li><a href="about.html">Nosotros</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Terms of service</a></li>
