--- a/single-post.html
+++ b/single-post.html
@@ -458,32 +458,10 @@
           <h4>Enlaces</h4>
           <ul>
             <li><a href="./">Inicio</a></li>
-            <li><a href="about.html">Nosotros</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Hic solutasetp</h4>
-          <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li>
-            <li><a href="#">Excepturi dignissimos</a></li>
-            <li><a href="#">Suscipit distinctio</a></li>
-            <li><a href="#">Dilecta</a></li>
-            <li><a href="#">Sit quas consectetur</a></li>
+            <li><a href="nosotros/">Nosotros</a></li>
+            <li><a href="publicaciones/">Publicaciones</a></li>
+            <li><a href="noticias/">#Noticias</a></li>
+            <li><a href="eventos/">Eventos</a></li>
           </ul>
         </div>
 
