--- a/contacto/index.html
+++ b/contacto/index.html
@@ -49,18 +49,18 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <!--<li><a href="index.html">Home</a></li>-->
-           <li class="dropdown"><a href="about.html"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+           <li class="dropdown"><a href="nosotros/"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="about.html">CECH</a></li>
-              <li><a href="derecho.html">Sección Derecho</a></li>
-              <li><a href="economia.html">Sección Economía</a></li>
-              <li><a href="literatura.html">Sección Literatura</a></li>
+              <li><a href="nosotros/">CECH</a></li>
+              <li><a href="nosotros/derecho/">Sección Derecho</a></li>
+              <li><a href="nosotros/economia/">Sección Economía</a></li>
+              <li><a href="nosotros/literatura/">Sección Literatura</a></li>
             </ul>
           </li>
-          <li><a href="publicaciones.html">Publicaciones</a></li>
-          <li><a href="noticias.html">#Noticias</a></li>
-          <li><a href="eventos.html">Eventos</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="publicaciones/">Publicaciones</a></li>
+          <li><a href="noticias/">#Noticias</a></li>
+          <li><a href="eventos/">Eventos</a></li>
+          <li><a href="contacto/">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -199,32 +199,10 @@
           <h4>Enlaces</h4>
           <ul>
             <li><a href="./">Inicio</a></li>
-            <li><a href="about.html">Nosotros</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Hic solutasetp</h4>
-          <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li>
-            <li><a href="#">Excepturi dignissimos</a></li>
-            <li><a href="#">Suscipit distinctio</a></li>
-            <li><a href="#">Dilecta</a></li>
-            <li><a href="#">Sit quas consectetur</a></li>
+            <li><a href="nosotros/">Nosotros</a></li>
+            <li><a href="publicaciones/">Publicaciones</a></li>
+            <li><a href="noticias/">#Noticias</a></li>
+            <li><a href="eventos/">Eventos</a></li>
           </ul>
         </div>
 
