--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <!--<li><a href="index.html" class="active">Home</a></li>-->
-          <li class="dropdown"><a href="about/"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="nosotros/"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="about/">CECH</a></li>
-              <li><a href="nostros/derecho/">Sección Derecho</a></li>
+              <li><a href="nosotros/">CECH</a></li>
+              <li><a href="nosotros/derecho/">Sección Derecho</a></li>
               <li><a href="nosotros/economia/">Sección Economía</a></li>
               <li><a href="nosotros/literatura/">Sección Literatura</a></li>
             </ul>
