--- a/contacto/index.html
+++ b/contacto/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="./assets/img/favicon.png" rel="icon">
+  <link href="./assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,13 +18,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="./assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="./assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="./assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: ZenBlog
@@ -49,18 +49,18 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <!--<li><a href="index.html">Home</a></li>-->
-           <li class="dropdown"><a href="nosotros/"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+           <li class="dropdown"><a href="./nosotros/"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="nosotros/">CECH</a></li>
-              <li><a href="nosotros/derecho/">Sección Derecho</a></li>
-              <li><a href="nosotros/economia/">Sección Economía</a></li>
-              <li><a href="nosotros/literatura/">Sección Literatura</a></li>
+              <li><a href="./nosotros/">CECH</a></li>
+              <li><a href="./nosotros/derecho/">Sección Derecho</a></li>
+              <li><a href="./nosotros/economia/">Sección Economía</a></li>
+              <li><a href="./nosotros/literatura/">Sección Literatura</a></li>
             </ul>
           </li>
-          <li><a href="publicaciones/">Publicaciones</a></li>
-          <li><a href="noticias/">#Noticias</a></li>
-          <li><a href="eventos/">Eventos</a></li>
-          <li><a href="contacto/">Contacto</a></li>
+          <li><a href="./publicaciones/">Publicaciones</a></li>
+          <li><a href="./noticias/">#Noticias</a></li>
+          <li><a href="./eventos/">Eventos</a></li>
+          <li><a href="./">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -131,7 +131,7 @@
           </div>
 
           <div class="col-lg-8">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="./forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -199,10 +199,10 @@
           <h4>Enlaces</h4>
           <ul>
             <li><a href="./">Inicio</a></li>
-            <li><a href="nosotros/">Nosotros</a></li>
-            <li><a href="publicaciones/">Publicaciones</a></li>
-            <li><a href="noticias/">#Noticias</a></li>
-            <li><a href="eventos/">Eventos</a></li>
+            <li><a href="./nosotros/">Nosotros</a></li>
+            <li><a href="./publicaciones/">Publicaciones</a></li>
+            <li><a href="./noticias/">#Noticias</a></li>
+            <li><a href="./eventos/">Eventos</a></li>
           </ul>
         </div>
 
