--- a/contacto/index.html
+++ b/contacto/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="./assets/img/favicon.png" rel="icon">
-  <link href="./assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="..assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,13 +18,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="./assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="./assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="./assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="./assets/css/main.css" rel="stylesheet">
+  <link href="../assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: ZenBlog
@@ -40,7 +40,7 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
 
-      <a href="./" class="logo d-flex align-items-center me-auto me-xl-0">
+      <a href="../" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename">Círculo de Estudios Chinos</h1>
@@ -49,17 +49,17 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <!--<li><a href="index.html">Home</a></li>-->
-           <li class="dropdown"><a href="./nosotros/"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+           <li class="dropdown"><a href="../nosotros/"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="./nosotros/">CECH</a></li>
-              <li><a href="./nosotros/derecho/">Sección Derecho</a></li>
-              <li><a href="./nosotros/economia/">Sección Economía</a></li>
-              <li><a href="./nosotros/literatura/">Sección Literatura</a></li>
+              <li><a href="../nosotros/">CECH</a></li>
+              <li><a href="../nosotros/derecho/">Sección Derecho</a></li>
+              <li><a href="../nosotros/economia/">Sección Economía</a></li>
+              <li><a href="../nosotros/literatura/">Sección Literatura</a></li>
             </ul>
           </li>
-          <li><a href="./publicaciones/">Publicaciones</a></li>
-          <li><a href="./noticias/">#Noticias</a></li>
-          <li><a href="./eventos/">Eventos</a></li>
+          <li><a href="../publicaciones/">Publicaciones</a></li>
+          <li><a href="../noticias/">#Noticias</a></li>
+          <li><a href="../eventos/">Eventos</a></li>
           <li><a href="./">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -83,7 +83,7 @@
         <h1 class="mb-2 mb-lg-0">Información de contacto</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="./">Inicio</a></li>
+            <li><a href="../">Inicio</a></li>
             <li class="current">Contacto</li>
           </ol>
         </nav>
@@ -131,7 +131,7 @@
           </div>
 
           <div class="col-lg-8">
-            <form action="./forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="../forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -175,7 +175,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="./" class="logo d-flex align-items-center">
+          <a href="../" class="logo d-flex align-items-center">
             <span class="sitename">Círculo de Estudios Chinos</span>
           </a>
           <div class="footer-contact pt-3">
@@ -198,11 +198,11 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Enlaces</h4>
           <ul>
-            <li><a href="./">Inicio</a></li>
-            <li><a href="./nosotros/">Nosotros</a></li>
-            <li><a href="./publicaciones/">Publicaciones</a></li>
-            <li><a href="./noticias/">#Noticias</a></li>
-            <li><a href="./eventos/">Eventos</a></li>
+            <li><a href="../">Inicio</a></li>
+            <li><a href="../nosotros/">Nosotros</a></li>
+            <li><a href="../publicaciones/">Publicaciones</a></li>
+            <li><a href="../noticias/">#Noticias</a></li>
+            <li><a href="../eventos/">Eventos</a></li>
           </ul>
         </div>
 
@@ -240,13 +240,13 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/php-email-form/validate.js"></script>
+  <script src="../assets/vendor/aos/aos.js"></script>
+  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="../assets/js/main.js"></script>
 
 </body>
 
